--- a/soa.contract/pom.xml
+++ b/soa.contract/pom.xml
@@ -3,14 +3,15 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.solveapuzzle.soa.validator</groupId>
 	<artifactId>contract</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0-SNAPSHOT</version>
 	<name>contract</name>
 	<description>SOA Contracts to validate</description>
 
   <parent>
-<groupId>com.solveapuzzle</groupId>
+ <groupId>com.solveapuzzle</groupId>
   <artifactId>soa.validator</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+    <!-- Default starting version is 0-SNAPSHOT -->
+    <version>0-SNAPSHOT</version>
 </parent>
 
 	<build>
