--- a/soa.rules/pom.xml
+++ b/soa.rules/pom.xml
@@ -2,14 +2,16 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.solveapuzzle.soa.validator</groupId>
   <artifactId>rules</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0-SNAPSHOT</version>
   <name>rules</name>
   <description>Soa Rules for validation</description>
+
   <parent>
-<groupId>com.solveapuzzle</groupId>
+ <groupId>com.solveapuzzle</groupId>
   <artifactId>soa.validator</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-</parent> 
+    <!-- Default starting version is 0-SNAPSHOT -->
+    <version>0-SNAPSHOT</version>
+</parent>
 
 
   <properties>
