--- a/pom.xml
+++ b/pom.xml
@@ -178,8 +178,8 @@
   <!-- Software configuration management details -->
   <!-- Critical for the mvn:release plugin & process, where to find the source code. -->
   <scm>
-    <connection>scm:git:git://github.com/npiper/${project.name}.git</connection>
-    <developerConnection>scm:git:git@github.com:npiper/${project.name}.git</developerConnection>
+    <connection>scm:git:https://github.com/npiper/${project.name}.git</connection>
+    <developerConnection>scm:git:npiper@github.com:npiper/${project.name}.git</developerConnection>
     <url>https://github.com/npiper/${project.name}/</url>
   </scm>
 
